chore(VueDependencies): update pnpm hoist

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
 registry=https://registry.npmmirror.com/
 
 strict-peer-dependencies=false
+
+public-hoist-pattern[]=@vue/runtime-core
+public-hoist-pattern[]=@vue/shared
