--- a/packages/vant-compat/package.json
+++ b/packages/vant-compat/package.json
@@ -36,13 +36,12 @@
   "author": "chenjiahan",
   "license": "MIT",
   "devDependencies": {
-    "@vue/runtime-core": "^3.3.4",
-    "vant": "workspace:*",
-    "vue": "^3.3.4",
     "esbuild": "^0.17.12",
     "release-it": "^15.1.1",
     "rimraf": "^5.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vant": "workspace:*",
+    "vue": "^3.3.4"
   },
   "release-it": {
     "git": {
