fix: 定制键盘横屏适配 (#33)
* fix: 定制键盘横屏适配

* fix: 可能的横屏样式Android软键盘造成的样式错乱

* fix: 仅处理number-keyboard

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "check": "node bin/ggpull && node bin/check-deps",
     "dev:vusion": "cross-env scene=desktop vue-cli-service doc --port 9100",
     "dev": "cross-env scene=desktop vant-cli dev",
-    "dev2": "vant-cli dev",
+    "dev:mobile": "cross-env scene=mobile vant-cli dev",
     "lint": "vant-cli lint",
     "test": "vant-cli test",
     "copyimg": "node bin/copy-lcp-images ",
@@ -90,8 +90,6 @@
     "@xgheaven/nos-node-sdk": "^0.2.5",
     "cross-env": "^7.0.3",
     "fs-extra": "^10.1.0",
-    "postcss": "^8.4.19",
-    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "2.1.0",
     "shx": "^0.3.3",
     "vue": "2.6.12",
