--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "jest-serializer-html": "^7.1.0"
   }
 }
