chore(eslint-config): bump all dependencies

--- a/packages/vant-cli/.eslintrc
+++ b/packages/vant-cli/.eslintrc
@@ -1,8 +1,4 @@
 {
   "root": true,
-  "extends": ["@vant"],
-  "rules": {
-    "global-require": 0,
-    "import/no-dynamic-require": 0
-  }
+  "extends": ["@vant"]
 }
