--- a/packages/vant-compat/package.json
+++ b/packages/vant-compat/package.json
@@ -25,7 +25,7 @@
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
     "build:bundle": "node ./build.js",
     "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
-    "release": "pnpm build && release-it"
+    "release": "pnpm build && vant-cli release"
   },
   "repository": {
     "type": "git",
@@ -40,14 +40,7 @@
     "vant": "workspace:*",
     "vue": "^3.3.4",
     "esbuild": "^0.18.11",
-    "release-it": "^16.1.3",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
-  },
-  "release-it": {
-    "git": {
-      "tag": false,
-      "commitMessage": "release: @vant/compat v${version}"
-    }
   }
 }
