--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -25,7 +25,7 @@
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
     "build:bundle": "node ./build.js",
     "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
-    "release": "pnpm build && release-it",
+    "release": "pnpm build && vant-cli release",
     "prepare": "pnpm build"
   },
   "repository": {
@@ -39,14 +39,7 @@
   "devDependencies": {
     "@popperjs/core": "^2.11.6",
     "esbuild": "^0.18.11",
-    "release-it": "^16.1.3",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
-  },
-  "release-it": {
-    "git": {
-      "tag": false,
-      "commitMessage": "release: @vant/popperjs v${version}"
-    }
   }
 }
