refactor(cli): rewrite release command (#12133)
* refactor(cli): rewrite release command

* fix: duplicated build

* fix: no git check

* feat: rollback version

* chore: release config

* chore: add release config

--- a/packages/vant-area-data/package.json
+++ b/packages/vant-area-data/package.json
@@ -21,7 +21,7 @@
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
     "build:bundle": "node ./build.js",
     "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
-    "release": "pnpm build && release-it",
+    "release": "vant-cli release",
     "prepare": "pnpm build"
   },
   "publishConfig": {
@@ -38,14 +38,7 @@
   "license": "MIT",
   "devDependencies": {
     "esbuild": "^0.18.11",
-    "release-it": "^16.1.3",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
-  },
-  "release-it": {
-    "git": {
-      "tag": false,
-      "commitMessage": "release: @vant/area-data v${version}"
-    }
   }
 }
