--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "rimraf ./lib && tsc",
-    "release": "pnpm build & release-it",
+    "release": "vant-cli release",
     "prepare": "pnpm build"
   },
   "files": [
@@ -32,7 +32,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
-    "release-it": "^16.1.3",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
   },
@@ -42,11 +41,5 @@
     "fs-extra": "^11.1.0",
     "enquirer": "2.3.6",
     "picocolors": "^1.0.0"
-  },
-  "release-it": {
-    "git": {
-      "tag": false,
-      "commitMessage": "release: create-vant-cli-app v${version}"
-    }
   }
 }
