--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "rimraf ./lib && tsc",
-    "release": "pnpm build & release-it",
+    "release": "vant-cli release",
     "prepare": "pnpm build"
   },
   "files": [
@@ -63,6 +63,7 @@
     "esbuild": "^0.18.11",
     "eslint": "^8.31.0",
     "execa": "^6.1.0",
+    "enquirer": "2.3.6",
     "fast-glob": "^3.2.11",
     "fs-extra": "^11.1.0",
     "hash-sum": "^2.0.0",
@@ -82,18 +83,11 @@
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "prettier": "^3.0.0",
-    "release-it": "^16.1.3",
     "terser": "^5.16.1",
     "transliteration": "^2.3.5",
     "typescript": "^5.0.4",
     "vite": "^4.4.2",
     "vite-plugin-md": "^0.11.9",
     "vue-router": "^4.1.6"
-  },
-  "release-it": {
-    "git": {
-      "tag": false,
-      "commitMessage": "release: @vant/cli v${version}"
-    }
   }
 }
