--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -18,7 +18,7 @@
     "test": "vant-cli test",
     "build": "vant-cli build",
     "build:site": "vant-cli build-site",
-    "release": "cp ../../README.md ./ && vant-cli release && rm ./README.md",
+    "release": "cp ../../README.md ./ && vant-cli release --gitTag && rm ./README.md",
     "release:site": "pnpm build:site && npx gh-pages -d site-dist --add",
     "test:update": "vant-cli test --updateSnapshot",
     "test:watch": "vant-cli test --watch",
