--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -68,7 +68,7 @@
     "jsdom": "^22.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.4.2",
-    "vitest": "^0.34.2",
+    "vitest": "0.34.2",
     "vitest-canvas-mock": "^0.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6"
