chore(CI): fix codecov reporter (#12210)
* chore(CI): update codecov/codecov-action to v3

* chore: use default test reporter

* chore: use text-summary

* chore: update coverage dir

* chore: switch to istanbul

* chore: use lcov

* chore: fix open:coverage path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,9 +51,10 @@ jobs:
       run: pnpm run test:coverage
 
     - name: Upload coverage to Codecov  
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        directory: ./packages/vant/test/coverage
 
   build:
     runs-on: ubuntu-latest
