--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -23,7 +23,7 @@
     "test:update": "vitest run -u",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "open:coverage": "open test/coverage/index.html"
+    "open:coverage": "open test/coverage/lcov-report/index.html"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
@@ -61,14 +61,14 @@
     "@vant/icons": "workspace:*",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vitest/coverage-v8": "0.34.2",
+    "@vitest/coverage-istanbul": "0.34.1",
     "@vue/runtime-core": "^3.3.4",
     "@vue/test-utils": "^2.3.2",
     "diffable-html": "^5.0.0",
     "jsdom": "^22.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.4.2",
-    "vitest": "^0.34.2",
+    "vitest": "0.34.2",
     "vitest-canvas-mock": "^0.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6"
