--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -46,8 +46,8 @@
     "components"
   ],
   "dependencies": {
-    "@vant/popperjs": "^1.3.0",
-    "@vant/use": "^1.5.1",
+    "@vant/popperjs": "workspace:^",
+    "@vant/use": "workspace:^",
     "@vue/shared": "^3.0.0"
   },
   "peerDependencies": {
