chore(CI): sync to gitee everyday

--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
+  # Sync to gitee everyday
+  schedule:
+    - cron: '0 1 * * *'
+
   workflow_dispatch:
 
 jobs:
