--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -42,6 +42,7 @@
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.191",
     "@types/markdown-it": "^13.0.0",
+    "codesandbox": "^2.2.3",
     "rimraf": "^5.0.0",
     "vue": "^3.3.4"
   },
@@ -56,9 +57,9 @@
     "autoprefixer": "^10.4.8",
     "commander": "^11.0.0",
     "consola": "^3.0.2",
+    "enquirer": "2.3.6",
     "esbuild": "^0.18.11",
     "eslint": "^8.46.0",
-    "enquirer": "2.3.6",
     "fast-glob": "^3.2.11",
     "fs-extra": "^11.1.0",
     "hash-sum": "^2.0.0",
