--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -55,10 +55,10 @@
     "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.8",
     "commander": "^11.0.0",
-    "consola": "^3.0.2",
-    "enquirer": "2.3.6",
+    "rslog": "^1.0.0",
     "esbuild": "^0.18.11",
     "eslint": "^8.46.0",
+    "enquirer": "2.3.6",
     "fast-glob": "^3.2.11",
     "fs-extra": "^11.1.0",
     "hash-sum": "^2.0.0",
